<resources>
    <string name="app_name">MuSales</string>

    <string name="menu_my_ads">Meus anúncios</string>
    <string name="menu_login">Entrar</string>
    <string name="menu_logout">Sair</string>

    <string name="auth_error_password_empty">Digite uma senha</string>
    <string name="auth_error_name_empty">Digite um nome</string>
    <string name="auth_error_email_empty">Digite um e-mail</string>
    <string name="auth_error_invalid_email">E-mail inválido</string>
    <string name="auth_error_strongest_password">Use uma senha mais forte</string>
    <string name="auth_error_valid_email">E-mail inválido</string>
    <string name="auth_error_account_already_exists">Essa conta já existe</string>
    <string name="auth_error_info_doesnt_exists">Não há um usuário com essa conta de e-mail</string>
    <string name="auth_error_user_not_exists">Usuário não cadastrado</string>
    <string name="auth_error_generic">Ocorreu um erro, tente novamente</string>

    <string name="data_error_standard_read_error">Ocorreu um erro ao recuperar anúncios</string>
    <string name="data_error_standard_save_error">Ocorreu um erro ao salvar o anúncio</string>
    <string name="data_error_standard_delete_error">Ocorreu um erro ao remover o anúncio</string>
    <string name="data_error_standard_update_error">Ocorreu um erro ao atualizar o anúncio</string>

    <string name="read_user_uid_standard_error">Ocorreu um erro recuperar seu identificador de usuário</string>

    <string name="category_cars">Automóveis</string>
    <string name="category_properties">Imóveis</string>
    <string name="category_electronics">Eletrônicos</string>
    <string name="category_fasion">Moda</string>
    <string name="category_sports">Esportes</string>
    <string name="category_music">Música</string>
    <string name="category_child">Infantil</string>
    <string name="category_jobs">Empregos</string>

    <string name="hint_phone_number">(xx) xxxxx-xxxx</string>
    <string name="locale">REGIÃO</string>
    <string name="category">CATEGORIA</string>
    <string name="title">Título</string>
    <string name="value">Valor</string>
    <string name="register_ad">CADASTRAR ANÚNCIO</string>
    <string name="description">Descrição</string>
    <string name="register">Cadastre-se</string>
    <string name="login">Logar</string>
    <string name="signup">ACESSAR</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="show_phone_number">VER TELEFONE</string>
    <string name="all_ads_empty">Não existem anúncios disponíveis</string>
    <string name="loading_ads">Carregando anuncios</string>
    <string name="my_ads_title">Meus anúncios</string>
    <string name="my_register_ad_title">Novo anúncio</string>
    <string name="cancel">Cancelar</string>
    <string name="to_filter">Filtrar</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="select_state">Selecione o estado</string>
    <string name="select_category">Selecione a categoria</string>
    <string name="form_invalid">Preencha todos os campos do formulário</string>
    <string name="cloud_error">Ocorreu um erro ao comunicar com o servidor</string>
    <string name="take_a_picture">Tirar uma foto</string>
    <string name="select_from_gallery">Selecionar da galeria</string>
    <string name="how_to_select_image">Como deseja selecionar a foto</string>
    <string name="want_to_delete_ad_title">Remover anúncio</string>
    <string name="want_to_delete_ad_description">Deseja remover o anúncio?</string>
    <string name="all_states">Todos</string>
    <string name="all_categories">Todas</string>

    <string-array name="states">
        <item>Todos</item>
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>

    <string-array name="categories">
        <item>Todas</item>
        <item>Automóveis</item>
        <item>Imóveis</item>
        <item>Eletrônicos</item>
        <item>Moda</item>
        <item>Esportes</item>
        <item>Música</item>
        <item>Infantil</item>
        <item>Empregos</item>
    </string-array>

</resources>